Organize ids and classes

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <main>
         <div class="hero"></div>
         <section class="content">
-            <div class="search-engine-optimization">
+            <div id="search-engine-optimization" class="content-item">
                 <img src="./assets/images/search-engine-optimization.jpg" alt="Notebook listing SEO aspects"
                     class="float-left" />
                 <h2>Search Engine Optimization</h2>
@@ -40,7 +40,7 @@
                     your visibility and find the right customers for your business.
                 </p>
             </div>
-            <div id="online-reputation-management" class="online-reputation-management">
+            <div id="online-reputation-management" class="content-item">
                 <img src="./assets/images/online-reputation-management.jpg"
                     alt="Computer screen showing charts with a title of 'Reputation'" class="float-right" />
                 <h2>Online Reputation Management</h2>
@@ -50,7 +50,7 @@
                     gives you the control over what potential customers see when they search for your business.
                 </p>
             </div>
-            <div id="social-media-marketing" class="social-media-marketing">
+            <div id="social-media-marketing" class="content-item">
                 <img src="./assets/images/social-media-marketing.jpg" alt="Graphic showing social media buzz"
                     class="float-left" />
                 <h2>Social Media Marketing</h2>
@@ -62,7 +62,7 @@
             </div>
         </section>
         <aside class="benefits">
-            <div class="benefit-lead">
+            <div id="benefit-lead" class="benefit-item">
                 <h3>Lead Generation</h3>
                 <img src="./assets/images/lead-generation.png" />
                 <p>
@@ -70,7 +70,7 @@
                     directly to your website.
                 </p>
             </div>
-            <div class="benefit-brand">
+            <div id="benefit-brand" class="benefit-item">
                 <h3>Brand Awareness</h3>
                 <img src="./assets/images/brand-awareness.png" />
                 <p>
@@ -78,7 +78,7 @@
                     visibility for your business.
                 </p>
             </div>
-            <div class="benefit-cost">
+            <div id="benefit-cost" class="benefit-item">
                 <h3>Cost Management</h3>
                 <img src="./assets/images/cost-management.png"></img>
                 <p>
